[project]
name = "axiomcart-voice-agent"
version = "0.1.0"
description = "Multi-Agent Voice System for RetailTherapy E-Commerce"
requires-python = ">=3.11"
dependencies = [
    # Core AI — AWS Bedrock
    "boto3>=1.34",
    "langchain>=0.3",
    "langchain-aws>=0.2",
    "langgraph>=0.2",
    # RAG
    "chromadb>=0.5",
    "langchain-chroma>=0.2",
    # Voice I/O
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy>=1.26",
    "amazon-transcribe>=0.6",
    # Email (optional — escalation emails)
    "resend>=2.0",
    # Config
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev-dependencies = [
    "pytest>=8.0",
]
